--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
     "baseUrl": ".",
     "types": ["node", "jest"],
     "paths": {
-      "@controllers/*": ["src/interfaces/http/controllers/*"],
+      "@controllers": ["src/infra/http/controllers"],
+      "@routes": ["src/infra/http/routes"],
       "@serializers/*": ["src/interfaces/http/serializers/*"],
-      "@interfacesHttp/*": ["src/interfaces/http/*"],
       "@middleware/*": ["lib/interfaces/http/middleware/*"],
       "@models/*": ["src/infra/database/models/*"],
       "@database": ["src/infra/database"],
