--- a/.eslintrc
+++ b/.eslintrc
@@ -8,11 +8,7 @@
     "ecmaVersion": 2017
   },
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint",
-    "unused-imports",
-    "no-floating-promise"
-  ],
+  "plugins": ["@typescript-eslint", "unused-imports", "no-floating-promise", "prettier"],
   "root": true,
   "extends": [
     "eslint:recommended",
@@ -28,17 +24,17 @@
     "semi": ["error", "always"],
     "space-infix-ops": ["error", { "int32Hint": false }],
     "@typescript-eslint/no-unused-vars": "off",
-		"unused-imports/no-unused-imports": "error",
-		// "unused-imports/no-unused-vars": [
-		// 	"warn",
-		// 	{ "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+    "unused-imports/no-unused-imports": "error",
+    // "unused-imports/no-unused-vars": [
+    // 	"warn",
+    // 	{ "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
     // ],
     "@typescript-eslint/no-explicit-any": "off",
-    "import/no-unresolved": [2, { "caseSensitive": true }],
+    "import/no-unresolved": [0, { "caseSensitive": true }],
     "import/no-named-as-default-member": "off",
     "import/no-named-as-default": "off",
     // "@typescript-eslint/explicit-module-boundary-types": "off" //Habilitar para verificar erros do lint com maior facilidade
-    "max-len": [0, {"code": 160}]
+    "max-len": [0, { "code": 160 }]
   },
   "settings": {
     "import/parsers": {
