--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.25.0",
     "express": "^4.18.2",
-    "sqlite3": "5.1.2",
     "http-status": "^1.5.3",
     "jest": "27.3.1",
+    "sqlite3": "5.1.2",
     "typeorm": "0.3.10"
   },
   "devDependencies": {
@@ -25,11 +25,14 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-no-floating-promise": "^1.0.2",
+    "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "nodemon": "^2.0.12",
+    "prettier": "2.5.1",
     "supertest": "6.1.6",
     "ts-jest": "27.0.7",
     "ts-node": "8.10.2",
