Split serializers from controllhers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "types": ["node", "jest"],
     "paths": {
       "@controllers": ["src/interfaces/http/controllers"],
-      "@serializers/*": ["src/interfaces/http/serializers/*"],
+      "@serializers": ["src/interfaces/http/serializers"],
       "@interfacesHttp/*": ["src/interfaces/http/*"],
       "@middleware/*": ["lib/interfaces/http/middleware/*"],
       "@models": ["src/infra/database/models"],
