Enchance UseCases import structure and change its names to enhance comunication with developers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "types": ["node", "jest"],
     "paths": {
       "@controllers": ["src/interfaces/http/controllers"],
+      "@useCases": ["src/useCases"],
       "@serializers": ["src/interfaces/http/serializers"],
       "@interfacesHttp/*": ["src/interfaces/http/*"],
       "@middleware/*": ["lib/interfaces/http/middleware/*"],
