--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.25.0",
     "express": "^4.18.2",
-    "sqlite3": "5.1.2",
     "http-status": "^1.5.3",
     "jest": "27.3.1",
+    "sqlite3": "5.1.2",
     "typeorm": "0.3.10"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.7.4",
