--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,26 +24,20 @@
       "@serializers": ["src/interfaces/http/serializers"],
       "@serializers/*": ["src/interfaces/http/serializers/*"],
       "@interfacesHttp/*": ["src/interfaces/http/*"],
-      "@middleware/*": ["lib/interfaces/http/middleware/*"],
       "@models": ["src/infra/database/models"],
       "@models/*": ["src/infra/database/models/*"],
-      "@database": ["src/infra/database"],
-      "@database/*": ["src/infra/database/*"],
-      "@infraHelpers/*": ["src/infra/helpers/*"],
-      "@auth0Management/*": ["src/infra/auth0Management/*"],
-      "@auth0Management": ["src/infra/auth0Management"],
       "@repositories": ["src/infra/database/repositories"],
       "@repositories/*": ["src/infra/database/repositories/*"],
-      "@enumerators/*": ["src/infra/enumerators/*"],
       "@domains": ["src/domains"],
       "@domains/*": ["src/domains/*"],
+      "@mocks": ["test/mocks"],
+      "@mocks/*": ["test/mocks/*"],
       "@apps/*": ["src/app/*"],
       "@libs/*": ["lib/*"],
       "@errors": ["lib/errors"],
       "@errors/*": ["lib/errors/*"],
       "@config": ["config"],
       "@types": ["src/types.ts"],
-      "@constants": ["src/constants"],
       "@/*": ["src/*"]
     }
   },
